[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://scripts/player/player_manager.gd" id="1_mgr"]
[ext_resource type="Script" path="res://scripts/player/nova.gd" id="2_nova"]
[ext_resource type="Script" path="res://scripts/player/jason.gd" id="3_jason"]
[ext_resource type="Script" path="res://scripts/player/tether_handler.gd" id="4_tether"]
[ext_resource type="PackedScene" path="res://scenes/weapons/Projectile.tscn" id="5_proj"]
[ext_resource type="Resource" path="res://data/weapons/cannon_kinetic.tres" id="6_cannon"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nova"]
size = Vector2(48, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jason"]
size = Vector2(14, 28)

[node name="PlayerRoot" type="Node2D"]
script = ExtResource("1_mgr")

; ═══════════════════════════════════════════════════════
;  N.O.V.A. TANK
; ═══════════════════════════════════════════════════════
[node name="NOVA_Tank" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 73
script = ExtResource("2_nova")
main_weapon = ExtResource("6_cannon")
projectile_scene = ExtResource("5_proj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NOVA_Tank"]
shape = SubResource("RectangleShape2D_nova")

; ── Wheels (z -1 — render behind everything else) ─────────────────
; Four hexagon wheels. Centers at y=13, x = -16 / -5 / 5 / 16.
; Radius ≈ 5.  Computed with 60° increments:
;   offsets: (±5,0), (±2.5,±4.3)
[node name="Wheel_FL" type="Polygon2D" parent="NOVA_Tank"]
polygon = PackedVector2Array(-11, 13, -13.5, 17.3, -18.5, 17.3, -21, 13, -18.5, 8.7, -13.5, 8.7)
color = Color(0.15, 0.15, 0.18, 1.0)
z_index = -1

[node name="Wheel_ML" type="Polygon2D" parent="NOVA_Tank"]
polygon = PackedVector2Array(0, 13, -2.5, 17.3, -7.5, 17.3, -10, 13, -7.5, 8.7, -2.5, 8.7)
color = Color(0.15, 0.15, 0.18, 1.0)
z_index = -1

[node name="Wheel_MR" type="Polygon2D" parent="NOVA_Tank"]
polygon = PackedVector2Array(10, 13, 7.5, 17.3, 2.5, 17.3, 0, 13, 2.5, 8.7, 7.5, 8.7)
color = Color(0.15, 0.15, 0.18, 1.0)
z_index = -1

[node name="Wheel_BR" type="Polygon2D" parent="NOVA_Tank"]
polygon = PackedVector2Array(21, 13, 18.5, 17.3, 13.5, 17.3, 11, 13, 13.5, 8.7, 18.5, 8.7)
color = Color(0.15, 0.15, 0.18, 1.0)
z_index = -1

; ── Track skirt (gunmetal, slightly wider than hull) ──────────────
[node name="TrackSkirt" type="Polygon2D" parent="NOVA_Tank"]
polygon = PackedVector2Array(-26, 3, 26, 3, 26, 14, -26, 14)
color = Color(0.18, 0.18, 0.22, 1.0)
z_index = 0

; ── Hull (amber trapezoid — wider at base, notched at top) ────────
[node name="Hull" type="Polygon2D" parent="NOVA_Tank"]
polygon = PackedVector2Array(-22, -10, 22, -10, 24, 3, -24, 3)
color = Color(0.961, 0.620, 0.043, 1.0)
z_index = 1

; ── Turret base (hexagon platform the turret sits on) ─────────────
[node name="TurretBase" type="Polygon2D" parent="NOVA_Tank"]
polygon = PackedVector2Array(-7, -18, 7, -18, 9, -14, 7, -10, -7, -10, -9, -14)
color = Color(0.75, 0.48, 0.03, 1.0)
z_index = 2

; ── Turret (Node2D — rotated each frame in nova.gd to face mouse) ─
; Pivot is at (0, -13), sitting in the centre of TurretBase.
; Barrel polygon starts at x=3 to leave a tiny hub gap, extends 18px.
[node name="Turret" type="Node2D" parent="NOVA_Tank"]
position = Vector2(0, -13)
z_index = 3

[node name="Barrel" type="Polygon2D" parent="NOVA_Tank/Turret"]
polygon = PackedVector2Array(3, -2.5, 21, -2.5, 21, 2.5, 3, 2.5)
color = Color(0.22, 0.22, 0.28, 1.0)

; Weapon spawn point at the barrel tip
[node name="WeaponHardpoint" type="Marker2D" parent="NOVA_Tank/Turret"]
position = Vector2(21, 0)

; ═══════════════════════════════════════════════════════
;  JASON PILOT
; ═══════════════════════════════════════════════════════
[node name="Jason_Pilot" type="CharacterBody2D" parent="."]
collision_layer = 4
collision_mask = 81
visible = false
script = ExtResource("3_jason")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jason_Pilot"]
shape = SubResource("RectangleShape2D_jason")

; ── Jason armoured pilot — humanoid layers, bottom to top ─────────
; Collision: 14×28 (half: 7×14). Amber visor + chest accent tie to NOVA palette.

; Split legs (dark blue)
[node name="LegL" type="Polygon2D" parent="Jason_Pilot"]
polygon = PackedVector2Array(-6, 5, -1, 5, -1, 14, -6, 14)
color = Color(0.14, 0.30, 0.55, 1.0)

[node name="LegR" type="Polygon2D" parent="Jason_Pilot"]
polygon = PackedVector2Array(1, 5, 6, 5, 6, 14, 1, 14)
color = Color(0.14, 0.30, 0.55, 1.0)

; Tactical belt (near-black strip between torso and legs)
[node name="Belt" type="Polygon2D" parent="Jason_Pilot"]
polygon = PackedVector2Array(-6, 3, 6, 3, 6, 6, -6, 6)
color = Color(0.09, 0.10, 0.15, 1.0)

; Torso armour (slight trapezoid — wider at hips)
[node name="Torso" type="Polygon2D" parent="Jason_Pilot"]
polygon = PackedVector2Array(-5, -7, 5, -7, 6, 3, -6, 3)
color = Color(0.18, 0.40, 0.70, 1.0)

; Chest plate (brighter central panel over torso)
[node name="ChestPlate" type="Polygon2D" parent="Jason_Pilot"]
polygon = PackedVector2Array(-4, -6, 4, -6, 4, 1, -4, 1)
color = Color(0.25, 0.52, 0.85, 1.0)

; Amber chest accent — small power-cell indicator
[node name="ChestAccent" type="Polygon2D" parent="Jason_Pilot"]
polygon = PackedVector2Array(-2, -3, 2, -3, 2, -1, -2, -1)
color = Color(0.961, 0.620, 0.043, 1.0)

; Shoulder pauldrons (poke outside collision — visual only)
[node name="ShoulderL" type="Polygon2D" parent="Jason_Pilot"]
polygon = PackedVector2Array(-8, -7, -5, -7, -5, -3, -8, -4)
color = Color(0.22, 0.48, 0.78, 1.0)

[node name="ShoulderR" type="Polygon2D" parent="Jason_Pilot"]
polygon = PackedVector2Array(5, -7, 8, -7, 8, -4, 5, -3)
color = Color(0.22, 0.48, 0.78, 1.0)

; Neck connector (narrow dark strip)
[node name="Neck" type="Polygon2D" parent="Jason_Pilot"]
polygon = PackedVector2Array(-2, -9, 2, -9, 2, -7, -2, -7)
color = Color(0.12, 0.18, 0.25, 1.0)

; Helmet (tapers slightly at crown)
[node name="Helmet" type="Polygon2D" parent="Jason_Pilot"]
polygon = PackedVector2Array(-5, -14, 5, -14, 6, -9, -6, -9)
color = Color(0.20, 0.42, 0.72, 1.0)

; Amber visor — horizontal eye slit matching N.O.V.A. accent colour
[node name="Visor" type="Polygon2D" parent="Jason_Pilot"]
polygon = PackedVector2Array(-4, -12, 4, -12, 4, -10, -4, -10)
color = Color(0.961, 0.620, 0.043, 1.0)

; ═══════════════════════════════════════════════════════
;  CAMERA & TETHER
; ═══════════════════════════════════════════════════════
[node name="CameraManager" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 360
position_smoothing_enabled = true
position_smoothing_speed = 6.0

[node name="NeuralTetherLogic" type="Node" parent="."]
script = ExtResource("4_tether")

[node name="TetherTimer" type="Timer" parent="NeuralTetherLogic"]
wait_time = 0.1
one_shot = false
